gitops/manifests/network-policies/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: qoves-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
